--- a/Uebung/Blatt6/Blatt6-empty.ipynb
+++ b/Uebung/Blatt6/Blatt6-empty.ipynb
@@ -4,19 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Statistik I für Naturwissenschaftler*innen: Übungsblatt 6\n",
-    "\n",
-    "Im AppHub sollte scipy up-to-date sein. Sollten Sie auf einem anderen, eventuell älteren System arbeiten, updaten Sie zunächst Ihr scipy durch Ausführen der folgende Code-Zelle:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%script bash\n",
-    "pip install scipy --upgrade"
+    "# Statistik I für Naturwissenschaftler*innen: Übungsblatt 6"
    ]
   },
   {
@@ -289,7 +277,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
