--- a/Uebung/Blatt1/Blatt1-empty.ipynb
+++ b/Uebung/Blatt1/Blatt1-empty.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "## Aufgabe 1\n",
     "\n",
-    "Gegeben seien im Grundbereich der positiven ganzen Zahlen, die nicht größer als 25 oder kleiner als 37 und durch 6 teilbar sind, die folgenden Mengen:\n",
+    "Gegeben seien im Grundbereich der positiven ganzen Zahlen, die nicht größer als 25, oder kleiner als 37 und durch 6 teilbar sind, die folgenden Mengen:\n",
     "\n",
     "   * $G$: gerade Zahlen\n",
     "\n",
@@ -203,7 +203,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -217,7 +217,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
