all updated sheets

--- a/Uebung/Blatt1/Blatt1-empty.ipynb
+++ b/Uebung/Blatt1/Blatt1-empty.ipynb
@@ -2,74 +2,52 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "848e35b9-a3a1-4ca4-9bee-72663b08d806",
    "metadata": {},
    "source": [
     "# Statistik I für Naturwissenschaftler*innen: Übungsblatt 1\n",
     "\n",
-    "Bitte beachten Sie: in der Online-Klausur werden Sie nicht nach Rechenwegen gefragt werden. Die Angabe von numerisch korrekten Ergebnissen reicht dort aus. Insofern macht es Sinn, dass Sie sich zur Zeitersparnis mit Python vertraut machen.\n",
+    "Bitte beachten Sie: In der Online-Klausur werden Sie nicht nach Rechenwegen gefragt. Die Angabe von numerisch korrekten Ergebnissen reicht dort aus. Insofern macht es Sinn, sich zur Zeitersparnis mit Python vertraut zu machen.\n",
     "\n",
     "## Aufgabe 1\n",
     "\n",
-    "Gegeben seien im Grundbereich der positiven ganzen Zahlen, die nicht größer als 25, oder kleiner als 37 und durch 6 teilbar sind, die folgenden Mengen:\n",
+    "Gegeben seien im Grundbereich die positiven ganzen Zahlen kleiner gleich 20 sowie alle Zahlen zwischen 30 und 45, die durch 5 teilbar sind. Bestimmen Sie die folgenden Mengen:\n",
     "\n",
-    "   * $G$: gerade Zahlen\n",
+    "- **G**: Gerade Zahlen\n",
+    "- **Q**: Quadratzahlen\n",
+    "- **P**: Primzahlen\n",
+    "- **T**: Teiler von 100\n",
     "\n",
-    "   * $Q$: Quadratzahlen\n",
-    "\n",
-    "   * $P$: Primzahlen\n",
-    "\n",
-    "   * $T$: alle Teiler von 60\n",
-    "\n",
-    "### Aufgabe 1a\n",
-    "\n",
-    "Geben Sie die Mengen $G$, $Q$, $P$ und $T$ an! Was ist die Mächtigkeit der Grundmenge? "
+    "Bestimmen Sie außerdem die Mächtigkeit der Grundmenge. (Diese Aufgabe kann ohne Python auf Papier/am Whiteboard geloest werden!)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Aufgabe 1b\n",
-    "\n",
-    "Bestimmen Sie $G \\cup Q$, $Q \\cup T$, $Q\\cap P$, $Q\\cap T$, $Q \\smallsetminus T$, $P \\cap (T\\smallsetminus Q)$"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
+   "id": "222d274a-66af-4b8b-b254-5d04c1970136",
    "metadata": {},
    "source": [
     "## Aufgabe 2\n",
     "\n",
-    "Gegeben sei die Funktion $f: [-1.5, 1.5] \\rightarrow \\mathbb{R}$ mit $f(x) = 5x^{4} - e^{3x^{2}} + 2x^{2} + 3$\n",
+    "Gegeben sei die Funktion $f: [-1.5, 1.5] \\rightarrow \\mathbb{R}$ mit\n",
+    "\n",
+    "$$f(x) = 3x^{4} - e^{2x^{2}} + x^{2} + 5$$\n",
     "\n",
     "### Aufgabe 2a\n",
     "\n",
-    " Wie ist die Steigung der Funktion für $x = 0.5$?"
+    "Wie ist die Steigung der Funktion für $x = 0.7$?"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "613b9b98-9f29-4e4d-9257-c759502106a4",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "bfdc6fd5-d50d-467a-9297-a89a3adef267",
    "metadata": {},
    "source": [
     "### Aufgabe 2b\n",
@@ -80,95 +58,106 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e2d0913a-bdf0-4898-8c78-b04dd67129b4",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "a8fef08a-a90c-4efc-bf76-e1c52003b6ff",
    "metadata": {},
    "source": [
     "### Aufgabe 2c\n",
     "\n",
-    "Gegeben sei die Funktion $f: \\mathbb{R} \\rightarrow \\mathbb{R}$ mit $f(x) = 10x + 5$. Wie ist die Steigung der Funktion? An welchem Punkt schneidet die Funktion die $y$-Achse?"
+    "Gegeben sei die Funktion $f: \\mathbb{R} \\rightarrow \\mathbb{R}$ mit $f(x) = 8x + 3$. Wie ist die Steigung der Funktion? An welchem Punkt schneidet die Funktion die $y$-Achse?"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d2046cdf-433b-4fb1-a039-86fc2dc3df7f",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "2e34480a-eaf1-4008-8dc6-12840f713e91",
    "metadata": {},
    "source": [
     "## Aufgabe 3\n",
     "\n",
-    "Gegeben sei die Funktion $f: \\mathbb{R} \\smallsetminus \\{-2\\} \\rightarrow \\mathbb{R} $ mit $f(x) = \\frac{2x^{2}}{x+2}$. Bestimmen Sie die Extrempunkte der Funktion. Hinweis Quotientenregel: \n",
+    "Gegeben sei die Funktion $f: \\mathbb{R} \\smallsetminus \\{-3\\} \\rightarrow \\mathbb{R}$ mit\n",
     "\n",
-    "$$f(x) = \\frac{g(x)}{h(x)} \\rightarrow f'(x) = \\frac{h(x) \\cdot g'(x) - g(x) \\cdot h'(x)}{[h(x)]^{2}}$$\n",
+    "$$f(x) = \\frac{3x^{2}}{x+3}$$\n",
     "\n",
-    "... Die Quotientenregel benötigen Sie natürlich nur, wenn Sie diese Aufgabe händisch lösen. Python kann Ihnen hier viel Arbeit abnehmen."
+    "Bestimmen Sie die Extrempunkte der Funktion."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a1263529-ded0-4965-b304-1f082bfb9249",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "acae9936-2906-409d-a242-dac54134ab05",
    "metadata": {},
    "source": [
     "## Aufgabe 4\n",
     "\n",
     "### Aufgabe 4a\n",
     "\n",
-    "Gegeben sei die Funktion $f: [-2\\pi, 2\\pi] \\rightarrow \\mathbb{R}$ mit $f(x) = \\sin(2x) \\cdot 2x^{2}$\n",
+    "Gegeben sei die Funktion $f: [-2\\pi, 2\\pi] \\rightarrow \\mathbb{R}$ mit\n",
     "\n",
-    "Wie ist die Steigung der Funktion für $x = \\frac {\\pi}{4}$?\n",
+    "$$f(x) = \\sin(3x) \\cdot 3x^{2}$$\n",
     "\n",
-    "Hinweis: Die Ableitung von $\\sin()$ ist $\\cos()$. ... diesen Hinweis benötigen Sie natürlich nur, wenn Sie die Aufgabe händisch lösen. Sollten Sie den händischen Ansatz verfolgen, achten Sie bitte unbedingt darauf, Grad nicht mit Bogenmaß zu verwechseln."
+    "Wie ist die Steigung der Funktion für $x = \\frac {\\pi}{6}$?"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ad4adea0-0859-422c-a719-f5d5f3924225",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "3a8f7e9b-bd3d-4e7f-9c78-7fe57942f3ac",
    "metadata": {},
    "source": [
     "### Aufgabe 4b\n",
     "\n",
     "Berechnen Sie folgendes Integral:\n",
-    "$$\\int\\limits_{0}^{1} 5 \\cdot e^{x} + x \\text{ dx}$$"
+    "\n",
+    "$$\\int_{0}^{1} 4 \\cdot e^{x} + 2x dx$$"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b5f9d5dd-230b-4293-9a38-3c35ae28d31b",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "4f41c946-f7a3-4acd-918c-e046ae004906",
    "metadata": {},
    "source": [
     "### Aufgabe 4c\n",
     "\n",
     "Gegeben ist die Vorzeichenfunktion $sgn: \\mathbb{R} \\rightarrow \\mathbb{R}$ mit $sgn(x) = \\begin{cases}\n",
-    "          1 & \\text{falls  x > 0,}\\\\\n",
-    "0 & \\text{falls  x=0,}\\\\\n",
-    "-1 & \\text{falls  x < 0}\\\\\n",
+    "          1 & falls  x > 0,\\\\\n",
+    "0 & falls  x=0,\\\\\n",
+    "-1 & falls  x < 0\\\\\n",
     "         \\end{cases}$\n",
     "\n",
     "Skizzieren Sie die Funktion. Ist die Funktion stetig?\n",
@@ -178,24 +167,32 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ad49bc2c-66b5-4e41-8727-61ae83d06816",
    "metadata": {},
    "source": [
     "## Aufgabe 5\n",
     "\n",
-    "Für den Bau eines Wohnhauses soll eine 150m$^{2}$ große und 2.5m tiefe Grube ausgehoben werden. Der Boden auf dem Bauland ist mit Altlasten (Gift) verseucht. An der Oberfläche wird eine Giftkonzentration von 6 $\\frac{g}{m^{3}}$ gemessen. Die Giftkonzentration $k(x)$ (in $\\frac{g}{m^{3}}$) mit x Tiefe in m folgt einem Exponentialgesetz, bei dem sie sich pro 1m Tiefe halbiert.\n",
+    "Die Konzentration eines Schadstoffes an einer Seeoberfläche beträgt 8 g/m³ und nimmt mit jedem Meter Tiefe exponentiell ab, wobei sie sich pro Meter halbiert.\n",
     "\n",
     "### Aufgabe 5a\n",
     "\n",
-    "Geben Sie die Giftkonzentration $k = k(x)$ als Formel an.\n",
-    "\n",
+    "Geben Sie die Schadstoffkonzentration $k(x)$ an."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "85b715de-20d8-4c5c-904e-6b9f65b1fa9a",
+   "metadata": {},
+   "source": [
     "### Aufgabe 5b\n",
     "\n",
-    "Wieviel Gift befindet sich im Aushub der Baugrube?"
+    "Berechnen Sie die Schadstoffmenge in den oberen 3 Metern bei einer Oberfläche von 200 m²."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "75a28d0c-48e1-4d01-b196-249019467e8c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -217,9 +214,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 5
 }
