--- a/Uebung/Blatt4/Blatt4-empty.ipynb
+++ b/Uebung/Blatt4/Blatt4-empty.ipynb
@@ -13,14 +13,12 @@
    "source": [
     "## Aufgabe 1\n",
     "\n",
-    "Eine Zufallsvariable $X: \\Omega \\rightarrow \\mathbb{R}$ erfasst die Zahl, die beim einmaligen Werfen eines Oktaeder-Würfels oben liegt. (Ein Oktaeder-Würfel hat 8 Seiten und ist mit den Zahlen 1 bis 8 beschriftet.) Berechnen Sie (anhand der Definitionen aus der Vorlesung!)\n",
+    "Eine Zufallsvariable $Y: \\Omega \\rightarrow \\mathbb{R}$ erfasst die Anzahl der Wirkstoffmoleküle, die sich in einer zufällig ausgewählten Tablette befinden. Die Tablette kann zwischen 10 und 20 Wirkstoffmoleküle enthalten, wobei jede Menge gleich wahrscheinlich ist. Berechnen Sie:\n",
     "\n",
-    "    a) Erwartungswert\n",
-    "    b) Varianz und Standardabweichung\n",
-    "    c) Median\n",
-    "    d) Interquartilsabstand\n",
-    "\n",
-    "der Zufallsvariable."
+    "a) Erwartungswert  \n",
+    "b) Varianz und Standardabweichung  \n",
+    "c) Median  \n",
+    "d) Interquartilsabstand  "
    ]
   },
   {
@@ -36,14 +34,17 @@
    "source": [
     "## Aufgabe 2\n",
     "\n",
-    "Eine Zufallsvariable $X: \\Omega \\rightarrow \\mathbb{R}$ hat die Dichtefunktion \n",
+    "Eine Zufallsvariable $X: \\Omega \\rightarrow \\mathbb{R}$ besitzt die folgende Dichtefunktion:\n",
     "\n",
-    "$$f(x) = \\begin{cases}\n",
-    "          0.01x + 0.05 & \\text{ für } 0 \\leq x \\leq 10\\\\\n",
-    "0 & \\text{ sonst}\\\\\n",
-    "         \\end{cases}$$\n",
+    "$$\n",
+    "f(x) = \n",
+    "\\begin{cases}\n",
+    "\\dfrac{10}{13} \\cdot (0.02x + 0.03) & \\text{für } 0 \\leq x \\leq 10\\\\[6pt]\n",
+    "0 & \\text{sonst}\n",
+    "\\end{cases}\n",
+    "$$\n",
     "\n",
-    "Berechnen Sie Erwartungswert, Varianz und Standardabweichung!\n"
+    "Berechnen Sie Erwartungswert, Varianz und Standardabweichung!"
    ]
   },
   {
@@ -59,7 +60,30 @@
    "source": [
     "## Aufgabe 3\n",
     "\n",
-    "Auf dem Fischerfest stehen zwei Stände, die Lose verkaufen. Der erste Stand wirbt mit einer Gewinnchance von 25%, der zweite wirbt mit einer Gewinnchance von 40%. Sie kaufen je ein Los bei beiden Ständen. Betrachten Sie die Verteilung der Anzahl der Gewinnlose, die Sie dabei ziehen. Berechnen Sie Erwartungswert und Varianz dieser Verteilung."
+    "In einem Schutzgebiet werden zwei Kamerafallen an verschiedenen Standorten eingesetzt, um das Auftreten einer bestimmten Wildtierart (z. B. Wildkatze) zu erfassen. Kamera 1 hat eine Erfassungswahrscheinlichkeit von 35 %, Kamera 2 von 50 %. Beide Kameras lösen unabhängig voneinander aus. Sie werten je ein Bild pro Kamera aus.\n",
+    "\n",
+    "Betrachten Sie die Verteilung der Anzahl der Kameras, die das Tier erfassen.  \n",
+    "Berechnen Sie Erwartungswert und Varianz dieser Verteilung!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Aufgabe 4\n",
+    "\n",
+    "In einem Seminar zur Stadtentwicklung sind 30 Studierende eingeschrieben, davon wohnen 10 im Zentrum, 9 in der inneren Peripherie und 11 im Umland. Jeden Tag wird zufällig eine Person bestimmt, die das Protokoll für die Sitzung schreiben muss.\n",
+    "\n",
+    "Angenommen, Sie möchten die Wahrscheinlichkeit berechnen, dass in einer Woche (5 Tage) keine Person aus dem Zentrum, drei aus der inneren Peripherie und zwei aus dem Umland das Protokoll schreiben.\n",
+    "\n",
+    "Welche Verteilung würden Sie verwenden, um diese Wahrscheinlichkeit zu berechnen?"
    ]
   },
   {
@@ -75,7 +99,11 @@
    "source": [
     "## Aufgabe 5\n",
     "\n",
-    "In einer Schulklasse sind 33 Schüler\\*innen, 12 aus Dorf A, 8 aus Dorf B und 13 aus Dorf C. Jeden Tag wird zufällig ein\\*e Schüler\\*in unter den 33 Schüler\\*innen ausgelost, der die Tafel wischen muss. Angenommen, Sie wollten die Wahrscheinlichkeit bestimmen, dass in einer Woche kein\\*e Schüler\\*in aus Dorf A, zwei Schüler\\*innen aus Dorf B und 3 Schüler\\*innen aus Dorf C die Tafel wischen müssen. Welche Verteilung würden Sie dann verwenden, um die beschriebene Wahrscheinlichkeit zu berechnen?"
+    "In einem klinischen Versuch erhalten 40 PatientInnen entweder Medikament A oder ein Placebo. 24 PatientInnen bekommen Medikament A, 16 ein Placebo. Am Ende der Woche werden stichprobenartig 6 Patient*innen ausgewählt, deren Blutwerte genauer analysiert werden sollen.  \n",
+    "\n",
+    "Angenommen, Sie möchten die Wahrscheinlichkeit berechnen, dass unter den 6 zufällig ausgewählten PatientInnen genau 4 aus der Medikament-A-Gruppe und 2 aus der Placebo-Gruppe stammen.  \n",
+    "\n",
+    "Welche Verteilung würden Sie verwenden, um diese Wahrscheinlichkeit zu berechnen?\n"
    ]
   },
   {
@@ -91,27 +119,13 @@
    "source": [
     "## Aufgabe 6\n",
     "\n",
-    "In einer Schulklasse sind 33 Schüler\\*innen, 19 aus Dorf A und 14 aus Dorf B. Jeden Tag wird zufällig ein\\*e Schüler\\*in unter den Schüler\\*innen, die in der Woche noch nicht mit Wischen dran gewesen waren, ausgelost, der\\*die die Tafel wischen muss. Angenommen, Sie wollten die Wahrscheinlichkeit bestimmen, dass in einer Woche 3 Schüler\\*innen aus Dorf A und 2 Schüler\\*innen aus Dorf B die Tafel wischen müssen. Welche Verteilung würden Sie dann verwenden, um die beschriebene Wahrscheinlichkeit zu berechnen?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Aufgabe 7\n",
+    "In einem großflächigen Bodenmonitoring-Projekt werden in einem bestimmten Jahr 300 Bodenproben aus unterschiedlichen landwirtschaftlich genutzten Flächen genommen. Später stellt sich heraus, dass 15 dieser Proben stark mit einem bestimmten Pestizid belastet waren. Leider wurde bei der Lagerung versäumt, die Proben eindeutig zu kennzeichnen, sodass der Belastungsstatus einzelner Proben nicht mehr bekannt ist.\n",
     "\n",
-    "Nova Scotia Duck Tolling Retriever (kurz Toller; eine Hunderasse mit kleiner Population und Blutbank von allen Individuen in Deutschland) gelten im Jugendalter als anfällig für Autoimmunerkrankungen. Autoimmunkrankheiten werden allgemein mit dem MHC-Lokus im Genom assoziiert. In den Jahren 2004 bis 2008 wurden in Deutschland 250 Toller-Welpen aufgezogen, davon entwickelten 10 im Jugendalter eine Autoimmunkrankheit, das entspricht einer Wahrscheinlichkeit von 0.04, mit der ein Toller im Jugendalter an einer Autoimmunkrankheit erkrankt (Zahlen adaptiert aus http://www.drc.de/aktuell/DRC-Tollerzuechter_Stellungnahme.pdf).  Die Zahl der an Autoimmunerkrankungen leidenden Hunde wurde anonymisiert erfasst, d.h. es ist nicht möglich, den *Immunkrankheitsstatus* von Individuen einzelnen Proben in der Blutbank zuzuordnen. Eine Wissenschaftlerin möchte den MHC-Lokus von erkrankten Tollern sequenzieren (und glaubt, diesen im Nachhinein aufgrund seiner Sequenzeigenschaften dem Status *erkrankt* oder *nicht erkrankt* zuordnen zu können). Sie schlägt vor, $\\frac{3}{0.04} = 75$ Proben aus der Blutbank (beschränkt auf die 250 zwischen 2004 und 2008 aufgezogenen Hunde) zufällig auszuwählen und auf einem Illumina-Chip zu sequenzieren, und hofft, dass mindestens drei Proben von erkrankten Hunden dabei sein werden. Sei $X:= \\text{Anzahl Proben von erkrankten Hunden in der Stichprobe}$.\n",
+    "Eine Forscherin möchte nun durch eine gezielte Sequenzierung von Boden-DNA prüfen, ob sich belastete Proben anhand ihrer mikrobiellen Signatur im Nachhinein identifizieren lassen. Sie schlägt vor, 40 Proben zufällig aus dem Lager auszuwählen und zu sequenzieren. Die Hoffnung ist, dass mindestens zwei belastete Proben dabei sind. Sei $X := \\text{Anzahl belasteter Proben in der Stichprobe}$.\n",
     "\n",
-    "a) Wie ist die Zufallsvariable ($X:= \\text{Anzahl Proben von erkrankten Hunden in der Stichprobe}$) verteilt?\n",
+    "a) Wie ist die Zufallsvariable $X$ verteilt?\n",
     "\n",
-    "b) Berechnen Sie die Wahrscheinlichkeit, dass mindestens die Probe eines erkrankten Hundes unter 25 Proben ist, und zwar einmal \"ohne Zurücklegen\" und einmal \"mit Zurücklegen\" (unabhängig von Ihren Überlegungen zu Teil a)."
+    "b) Berechnen Sie die Wahrscheinlichkeit, dass mindestens eine belastete Probe unter 20 zufällig gezogenen Proben ist."
    ]
   },
   {
@@ -124,7 +138,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -138,7 +152,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
