--- a/Uebung/Blatt3/Blatt3-empty.ipynb
+++ b/Uebung/Blatt3/Blatt3-empty.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "## Aufgabe 1\n",
     "\n",
-    "Zur Beringung werden Vögel einzeln in einer Falle gefangen und nach der Beringung umgehend wieder freigelassen. Wir nehmen an, dass der Anteil von männlichen Vögeln unter allen Vögeln 48% beträgt. Wenn wir insgesamt 80 Vögel fangen, wie hoch ist dann die Wahrscheinlichkeit, dass genau die Hälfte der gefangenen Vögel männlich ist?"
+    "Bei einer Untersuchung von Waldbäumen wurde festgestellt, dass 35% der Bäume einer bestimmten Art von einem Pilz befallen sind. Wenn wir zufällig 100 Bäume untersuchen, wie hoch ist dann die Wahrscheinlichkeit, dass genau 30 Bäume befallen sind?"
    ]
   },
   {
@@ -26,15 +26,16 @@
    "source": [
     "## Aufgabe 2\n",
     "\n",
-    "Folgende Tabelle gibt die empirische Wahrscheinlichkeitsverteilung dafür an, dass ein*e zufällig*e ausgewählte*r Hörer*in der Statistik I Vorlesung dem $k = 1, ..., 6$-ten Fachsemester eines Studiengangs angehört:\n",
+    "Folgende Tabelle zeigt die empirische Verteilung der Studiengänge zufällig ausgewählter Teilnehmer*innen an einer geographischen Exkursion:\n",
     "\n",
-    "| Fachsemester $k$ | 1      | 2      | 3      | 4      | 5      | 6      |\n",
+    "| Studiengang $k$ | Geographie      | Umweltwissenschaften     | Geologie      | Biologie      | Humanbiologie      | Andere      |\n",
     "|----------------|--------|--------|--------|--------|--------|--------|\n",
-    "| $P(X = k)$       | 0.1849 | 0.6222 | 0.0123 | 0.1665 | 0.0043 | 0.0098 |\n",
+    "| $P(X = k)$       | 0.35 | 0.25 | 0.15 | 0.12 | 0.08 | 0.05 |\n",
     "\n",
-    "   a) Was ist die Wahrscheinlichkeit, dass ein zufällig ausgewählter Hörer höchstens im 4. Fachsemester ist?\n",
+    "   a) Wie hoch ist die Wahrscheinlichkeit, dass eine zufälliger Teilnehmer*in Geographie oder Umweltwissenschaft studiert?\n",
     "   \n",
-    "   b) Was ist die Wahrscheinlichkeit, dass ein Hörer mindestens im 3., aber höchstens im 5. Fachsemester ist?"
+    "   b)Wie hoch ist die Wahrscheinlichkeit, dass eine Teilnehmerin entweder Geologie, Biologie oder Humanbiologie studiert?\n",
+    " "
    ]
   },
   {
@@ -54,7 +55,8 @@
     "\n",
     "   a) Geben Sie die Dichtefunktion an\n",
     "\n",
-    "   b) Bestimmten Sie die Wahrscheinlichkeit $P(5.5 < X \\leq 8)$"
+    "   b) Bestimmten Sie die Wahrscheinlichkeit $P(3.5 < X \\leq 9)$\n",
+    "   "
    ]
   },
   {
@@ -78,7 +80,8 @@
     "  \n",
     "  c) Das 3\\%-Quantil: $\\tilde{z}_{0.03}$\n",
     "  \n",
-    "  d) Den Flächeninhalt unter der Dichtefunktion auf dem Intervall von $z = -\\infty$ bis $z = -2$: $P(Z \\leq -2)$"
+    "  d) Den Flächeninhalt unter der Dichtefunktion auf dem Intervall von $z = -\\infty$ bis $z = -2$: $P(Z \\leq -2)$\n",
+    "  "
    ]
   },
   {
@@ -94,7 +97,14 @@
    "source": [
     "## Aufgabe 5\n",
     "\n",
-    "Eine Schule wird von 506 Schülerinnen und 484 Schülern besucht. 115 Schülerinnen und 110 Schüler tragen eine Brille. Hängt die Wahrscheinlichkeit, dass ein\\*e Jugendliche\\*r, der diese Schule besucht, eine Brille trägt, vom Geschlecht ab?"
+    "In einer klinischen Studie wurden 600 Patienten mit einer bestimmten Erkrankung untersucht:\n",
+    "\n",
+    "* 320 Patienten erhielten das neue Medikament A\n",
+    "* 280 Patienten erhielten das Standardmedikament B\n",
+    "* Von den Medikament A-Patienten zeigten 48 Nebenwirkungen\n",
+    "* Von den Medikament B-Patienten zeigten 42 Nebenwirkungen\n",
+    "\n",
+    "Hängt die Wahrscheinlichkeit für Nebenwirkungen von der Art der Medikation ab?"
    ]
   },
   {
@@ -107,7 +117,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -121,7 +131,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
