--- a/Uebung/Blatt5/Blatt5-empty.ipynb
+++ b/Uebung/Blatt5/Blatt5-empty.ipynb
@@ -15,24 +15,15 @@
     "\n",
     "Geben Sie zur Erfassung folgender Merkmale passende Skalen und Beispiele des Wertebereichs an:\n",
     "\n",
-    "\n",
-    "a) Transekte (http://de.wikipedia.org/wiki/Transekt: \"Ein Transekt (engl. transect) ist ein Satz von Mess- bzw. Beobachtungspunkten entlang einer geraden Linie. Transekte werden methodisch in wissenschaftlichen Disziplinen verwandt, die einen räumlichen Bezug zu dem untersuchten Gegenstand herstellen. Vor allem werden Transekte bei Felduntersuchungen (Kartierung) in der Ökologie (Botanik und Zoologie), wie auch in der Geologie und Geoökologie genutzt.\") der Ostsee: Salzgehalt\n",
-    "\n",
-    "b) Transekte der Ostsee: absolute Wassertemperatur\n",
-    "\n",
-    "c) Transekte der Ostsee: Wassertemperatur in Bezug auf den Gefrierpunkt\n",
-    "\n",
-    "d) Abgegebene Wahlzettel: gewählte Partei\n",
-    "\n",
-    "e) Abgegebene Wahlzettel: Stimmen pro Partei\n",
-    "\n",
-    "f) Ereignisse: Wahrscheinlichkeiten\n",
-    "\n",
-    "g) Auf Covid-19 getestete Menschen: Testergebnis\n",
-    "\n",
-    "h) Schwangere Frauen: Gewichtszunahme vom ersten bis zum letzten Tag der Schwangerschaft\n",
-    "\n",
-    "Hinweis: diese Aufgabe auf Papier lösen!\n"
+    "a) Transekte im Wattenmeer: Schlickdicke  \n",
+    "b) Transekte im Wattenmeer: pH-Wert des Sediments  \n",
+    "c) Transekte im Wattenmeer: Temperaturunterschied zwischen Sediment und Wasser  \n",
+    "d) Online-Beteiligungskarten zu Verkehrsprojekten: bevorzugtes Verkehrsmittel  \n",
+    "e) Online-Beteiligungskarten zu Verkehrsprojekten: Zahl der Eingaben pro Verkehrsmitteltyp  \n",
+    "f) Umfragen zu Klimawandelwahrnehmung: Zustimmung zu Aussagen  \n",
+    "g) Personen in einem Evakuierungsplan: Teilnahme am Notfalltraining (ja/nein)  \n",
+    "h) Wanderer*innen: zurückgelegte Strecke während eines Tages\n",
+    "\n"
    ]
   },
   {
@@ -41,20 +32,16 @@
    "source": [
     "## Aufgabe 2\n",
     "\n",
-    "Gegeben ist eine Stichprobe mit folgenden Werten: $x = (16, 8, 23, 3, 14, 19, 1, 12)$. \n",
+    "Gegeben ist eine Stichprobe mit folgenden Werten (z. B. gemessene Plasmakonzentrationen eines Medikaments in ng/ml nach Einnahme durch verschiedene Patient*innen):  \n",
+    "$x = (21, 15, 18, 27, 12, 10, 30, 17)$\n",
     "\n",
     "Berechnen Sie folgende Kennwerte, insoweit sie definiert sind:\n",
     "\n",
-    "a) Stichprobenmittelwert\n",
-    "\n",
-    "b) Stichprobenvarianz\n",
-    "\n",
-    "c) Standardabweichung\n",
-    "\n",
-    "d) Median\n",
-    "\n",
-    "e) Interquartilabstand\n",
-    "\n",
+    "a) Stichprobenmittelwert  \n",
+    "b) Stichprobenvarianz  \n",
+    "c) Standardabweichung  \n",
+    "d) Median  \n",
+    "e) Interquartilabstand  \n",
     "f) Modalwert"
    ]
   },
@@ -71,9 +58,13 @@
    "source": [
     "## Aufgabe 3\n",
     "\n",
-    "Gegeben ist folgende Stichprobe: $x = (4, 6, 12, 17, 1, 15, 13, 4, 18)$. Skizzieren Sie einen Boxplot dieser Stichprobe. Zeichnen Sie alle Werte, die extremer als $1.5\\cdot IQR$  sind (vom 25\\% bzw.~75\\% Quantil aus), als Ausreißer ein. \n",
+    "Gegeben ist folgende Stichprobe:\n",
+    "$x = (3, 9, 2, 14, 7, 8, 6, 11, 13, 25)$\n",
+    "Es handelt sich um die gezählten Individuen einer bestimmten Pflanzenart auf zehn zufällig gewählten Probeflächen entlang eines Transektes durch ein Moorgebiet.\n",
     "\n",
-    "Hinweis: in der Klausur werden wir den Upload einer mit Python erstellten PDF-Datei erwarten!"
+    "Erstellen Sie mit Python einen Boxplot dieser Stichprobe. Per Default werden in Python alle Werte, die extremer als $1.5 \\cdot IQR$ vom 25 %- bzw. 75 %-Quantil entfernt sind, als Ausreißer eingezeichnet.\n",
+    "\n",
+    "Üben Sie den Download der Boxplot-Datei aus dem AppHub. Sie werden in der Klausur solche Plot-Dateien herunterladen und in Moodle hochladen müssen. Fotos/Screenshots/Zeichnungen von Hand werden in der Klausur nicht mit Punkten bewertet werden.\n"
    ]
   },
   {
@@ -89,9 +80,11 @@
    "source": [
     "## Aufgabe 4\n",
     "\n",
-    "Gegeben ist folgende Stichprobe: $x = (5, 3, 3, 5, 3, 2)$. Skizzieren Sie ein Histogramm absoluter Häufigkeiten mit einer Balkenbreite von 1 für diese Stichprobe.\n",
+    "Gegeben ist folgende Stichprobe:\n",
+    "$x = (4, 2, 5, 5, 4, 1, 3, 2)$\n",
+    "Es handelt sich um die Anzahl der Fahrräder, die an acht verschiedenen Zählstellen in einer Stadt innerhalb einer Stunde gezählt wurden.\n",
     "\n",
-    "Hinweis: in der Klausur werden wir den Upload einer mit Python erstellen PDF-Datei erwarten!"
+    "Skizzieren Sie ein Histogramm absoluter Häufigkeiten mit einer Balkenbreite von 1 für diese Stichprobe."
    ]
   },
   {
@@ -107,17 +100,16 @@
    "source": [
     "## Aufgabe 5\n",
     "\n",
-    "Die mittlere Körperlänge von Kindern (cm) wurde für verschiedene Altersgruppen (Alter in Monaten) erfasst\\footnote{veränderte Zahlenwerte nach Daten aus Moore \\textit{et al.}~(1989). Introduction to the Practice of Statistics, S. 118.}:\n",
+    "Bei einer klinischen Studie wurde die mittlere Konzentration eines Medikaments im Blutplasma (in ng/ml) für verschiedene Zeitpunkte nach der Einnahme erfasst (vereinfachte Daten):\n",
     "\n",
-    "| X: Alter (Monate)   | 18 | 19   | 20   | 21   | 22   | 23 |\n",
-    "|---------------------|----|------|------|------|------|----|\n",
-    "| Y: Körpergröße (cm) | 76 | 77.1 | 77.9 | 78.2 | 78.8 | 80 |\n",
+    "| X: Zeit nach Einnahme (h) | 1   | 2    | 3    | 4    | 5    | 6    |\n",
+    "|---------------------------|-----|------|------|------|------|------|\n",
+    "| Y: Konzentration (ng/ml)  | 15.2 | 12.5 | 10.1 | 8.4  | 6.3  | 4.7  |\n",
     "\n",
-    "Beschreiben Sie den Zusammenhang von Körpergröße und Alter\n",
+    "Beschreiben Sie den Zusammenhang von Wirkstoffkonzentration und Zeit:\n",
     "\n",
-    "a) graphisch durch einen Scatterplot (In der Klausur werden wir den Upload einer mit Python erstellten PDF-Datei erwarten!)\n",
-    "\n",
-    "b) durch den Bravais-Pearson-Korrelationskoeffizient (mit Interpretation!)"
+    "**a)** graphisch durch einen Scatterplot  \n",
+    "**b)** durch den Bravais-Pearson-Korrelationskoeffizienten (mit Interpretation)"
    ]
   },
   {
@@ -133,13 +125,13 @@
    "source": [
     "## Aufgabe 6\n",
     "\n",
-    "Folgende Tabelle gibt die Sonnenscheindauer und die mittlere Tagestemperatur für fünf Tage an:\n",
+    "Folgende Tabelle zeigt die relative Bodenfeuchte (%) und den Vegetationsindex (NDVI) an vier Messpunkten eines Untersuchungsgebiets:\n",
     "\n",
-    "| Sonnenscheindauer (h)                       | 12 | 10 | 5  | 9  |\n",
-    "|---------------------------------------------|----|----|----|----|\n",
-    "| Tagesdurchschnittstemperatur (Grad Celsius) | 30 | 28 | 28 | 17 |\n",
+    "| Bodenfeuchte (%) | 80 | 65 | 40 | 70 |\n",
+    "|------------------|----|----|----|----|\n",
+    "| NDVI             | 0.85 | 0.76 | 0.50 | 0.78 |\n",
     "\n",
-    "Berechnen und interpretieren Sie den Spearman-Korrelationskoeffizient.\n"
+    "Berechnen und interpretieren Sie den **Spearman-Korrelationskoeffizienten**."
    ]
   },
   {
@@ -155,16 +147,11 @@
    "source": [
     "## Aufgabe 7\n",
     "\n",
-    "Zur Kalibrierung eines Gaschromatographen wurden vordefinierte Standards unterschiedlicher Konzentration einer Substanz gemessen. Die Antwortvariable ist die Ausgabe des Gaschromatographen (veränderte Zahlenwerte nach Daten aus http://lib.stat.cmu.edu/DASL/Datafiles/Chromatography.html). Pro Standardkonzentration wurden 5 Wiederholungen gemessen.\n",
+    "Zur Analyse von Düngeeffekten wurde in einem Versuch die Beziehung zwischen dem Stickstoffgehalt des Bodens (mg/kg) und der oberirdischen Biomasseproduktion (g/m²) untersucht. Pro Stickstoffkonzentration wurden 5 Wiederholungsmessungen durchgeführt. Die Daten befinden sich in der Datei [regression_data.csv](regression_data.csv).\n",
     "\n",
-    "Berechnen Sie auf Grundlagen der folgenden Zusammenfassung der Daten ein lineares Regressionsmodell sowie die Schätzgüte dieses Modells. Diskutieren Sie eventuelle Probleme, die aus den Rohdaten (graphische Darstellung) ersichtlich sind.\n",
+    "Berechnen Sie auf Grundlage der folgenden Daten ein **lineares Regressionsmodell** sowie die **Schätzgüte dieses Modells**.  \n",
     "\n",
-    "|                       | $X$ = Standardkonzentration | $Y$ = Rückgabewert |\n",
-    "|-----------------------|-----------------------------|--------------------|\n",
-    "| Stichprobenmittelwert | 6.5                         | 269.975            |\n",
-    "| Standardabweichung    | 8.224                       | 350.97766          |\n",
-    "\n",
-    "$$r_{X,Y} = 0.9996$$"
+    "Diskutieren Sie potenzielle Probleme anhand der grafischen Darstellung der Rohdaten."
    ]
   },
   {
@@ -177,7 +164,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -191,7 +178,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
