adding quantile table

--- a/Uebung/Blatt3/Blatt3-empty.ipynb
+++ b/Uebung/Blatt3/Blatt3-empty.ipynb
@@ -72,7 +72,7 @@
    "source": [
     "## Aufgabe 4\n",
     "\n",
-    "Umseitig finden Sie eine Tabelle (im PDF Übungsblatt) der Flächeninhalte unter dem Graphen der Standardnormalverteilung. Nutzen Sie diese Tabelle, um folgende Werte anzugeben:\n",
+    "In diesem Ordner finden Sie eine Tabelle der Flächeninhalte unter dem Graphen der Standardnormalverteilung (normal_quantile_table.csv). Nutzen Sie diese Tabelle (oder die aus dem Vorlesungsskript zu Themenblock 3), um folgende Werte anzugeben:\n",
     "\n",
     "  a) Das 75\\%-Quantil: $\\tilde{z}_{0.75}$\n",
     "  \n",
@@ -81,7 +81,8 @@
     "  c) Das 3\\%-Quantil: $\\tilde{z}_{0.03}$\n",
     "  \n",
     "  d) Den Flächeninhalt unter der Dichtefunktion auf dem Intervall von $z = -\\infty$ bis $z = -2$: $P(Z \\leq -2)$\n",
-    "  "
+    "\n",
+    "Üben Sie außerdem den Umgang mit Python, insbesondere mit den Methoden `cdf()` und `ppf()`."
    ]
   },
   {
@@ -113,6 +114,65 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "# Code zum Generieren der Quantils-Tabelle (Normalverteilung)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import scipy.stats as stats\n",
+    "\n",
+    "def generate_normal_quantile_table(filename=\"normal_quantile_table.csv\"):\n",
+    "    \"\"\"\n",
+    "    Generates a normal quantile table with rows ranging from 0.0 to 2.9 in steps of 0.1\n",
+    "    and columns ranging from 0 to 9, and exports it to a CSV file.\n",
+    "    Rows are labeled with Z-scores in 0.0, 0.1, ..., 2.9 format.\n",
+    "    Probabilities are rounded to **five decimal places**.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Define first and second decimal ranges\n",
+    "    first_decimals = np.arange(0.0, 3.0, 0.1)  # 0.0, 0.1, ..., 2.9\n",
+    "    second_decimals = np.arange(0, 10)         # 0, 1, ..., 9\n",
+    "\n",
+    "    # Initialize a 2D list to hold the data\n",
+    "    data = []\n",
+    "\n",
+    "    for first in first_decimals:\n",
+    "        row_data = []\n",
+    "        for second in second_decimals:\n",
+    "            # Correct Z-score: first (tenths) + second (hundredths)\n",
+    "            z = first + second / 100\n",
+    "            cdf = round(stats.norm.cdf(z), 5)  # Round to 5 decimal places\n",
+    "            row_data.append(cdf)\n",
+    "        data.append(row_data)\n",
+    "\n",
+    "    # Create the DataFrame\n",
+    "    df = pd.DataFrame(data, columns=second_decimals)\n",
+    "    df.index = [f\"{x:.1f}\" for x in first_decimals]  # Format index to 1 decimal place\n",
+    "    df.index.name = \"z \\ *\"  # Fixed: No backslash needed\n",
+    "    df.columns.name = \"Second Decimal\"\n",
+    "\n",
+    "    # Export to CSV\n",
+    "    df.to_csv(filename)\n",
+    "\n",
+    "    return df\n",
+    "\n",
+    "# Generate the table and export it\n",
+    "quantile_table = generate_normal_quantile_table()\n",
+    "print(\"Table generated and exported to normal_quantile_table.csv\")"
+   ]
   }
  ],
  "metadata": {
@@ -131,7 +191,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
